<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_visibility"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/everyone"
            android:contentDescription="@string/everyone" />
        <TextView
            android:id="@+id/set_everyone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Everyone"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/followedpeople"
            android:contentDescription="@string/fllwpeople" />
        <TextView
            android:id="@+id/set_followed_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_people_you_follow"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mentionpeople"
            android:contentDescription="@string/mentionedpeople" />
        <TextView
            android:id="@+id/set_mentioned_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/only_mentioned_people"
            android:textSize="16sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

    </LinearLayout>


</LinearLayout>